<resources>
    <string name="app_name">EventViewer</string>
    <string name="title_activity_main">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="view_date_format">%1$s/%2$s/%3$s</string>
    <!--Login Fragment-->
    <string name="title_activity_start_up">StartUpActivity</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="login">Login</string>
    <string name="not_registered_yet">Not registered yet?</string>
    <string name="error_invalid_email">Email is invalid</string>
    <string name="error_invalid_password">Password is invalid</string>
    <!--Registration Fragment-->
    <string name="registration">Registration</string>
    <string name="hint_registration_name">Name</string>
    <string name="hint_registration_nickname">Nickname</string>
    <string name="hint_registration_email">Email</string>
    <string name="hint_registration_birthday">Birthday</string>
    <string name="hint_registration_password">Password</string>
    <string name="hint_registration_repeat_password">Repeat password</string>
    <string name="register">Register</string>
    <string name="registration_error_invalid_name">Name is empty</string>
    <string name="registration_error_invalid_nickname">Nickname is empty</string>
    <string name="registration_error_invalid_birthday">Birthday is empty</string>
    <string name="registration_error_invalid_email">Email is invalid</string>
    <string name="registration_error_invalid_password">Password is invalid</string>
    <string name="registration_error_invalid_repeat_password">Passwords do not match</string>
    <!--Event list-->
    <string name="all">All events</string>
    <string name="conference">Conference</string>
    <!--Event details-->
    <string name="event_details">Event details</string>
    <string name="start_date_format"><b>Start date</b>: %1$s</string>
    <string name="end_date_format"><b>End date</b>: %1$s</string>
    <string name="local_timezone_format"><b>Local event timezone</b>: %1$s</string>
    <string name="phone_format"><b>Phone</b>: %1$s</string>
    <string name="email_format"><b>Email</b>: %1$s</string>
    <string name="address_format"><b>Address</b>: %1$s</string>
    <!--User Profile-->
    <string name="profile">Profile</string>
    <!--Organization details-->
    <string name="orgagizations">Organizations</string>
    <!--Organization list-->
    <string name="organization_list">Organization list</string>
</resources>
