<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.Guideline
            android:id="@+id/guidelineVerticalLeft"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="@dimen/left_side_content_margin" />

        <android.support.constraint.Guideline
            android:id="@+id/guidelineVerticalRight"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="@dimen/right_side_content_margin" />

        <android.support.constraint.Guideline
            android:id="@+id/guidelineHorizontalTop"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="@dimen/top_side_content_margin" />

        <ImageView
            android:id="@+id/mIvEventImage"
            android:layout_width="0dp"
            android:layout_height="@dimen/event_details_image_height"
            android:background="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/guidelineVerticalRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineVerticalLeft"
            app:layout_constraintTop_toTopOf="@+id/guidelineHorizontalTop" />

        <TextView
            android:id="@+id/mTvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp16"
            app:layout_constraintEnd_toStartOf="@+id/guidelineVerticalRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineVerticalLeft"
            app:layout_constraintTop_toBottomOf="@+id/mIvEventImage"
            tools:text="Title text" />

        <TextView
            android:id="@+id/mTvDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/guidelineVerticalRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineVerticalLeft"
            app:layout_constraintTop_toBottomOf="@+id/mTvTitle"
            tools:text="Description text" />

        <TextView
            android:id="@+id/mTvAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/guidelineVerticalRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineVerticalLeft"
            app:layout_constraintTop_toBottomOf="@+id/mTvDescription"
            tools:text="@string/address_format" />

        <TextView
            android:id="@+id/mTvStartDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/guidelineVerticalRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineVerticalLeft"
            app:layout_constraintTop_toBottomOf="@+id/mTvAddress"
            tools:text="@string/date_format" />

        <TextView
            android:id="@+id/mTvEndDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/guidelineVerticalRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineVerticalLeft"
            app:layout_constraintTop_toBottomOf="@+id/mTvStartDate"
            tools:text="@string/date_format" />

        <TextView
            android:id="@+id/mTvLocalEventTimezone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/guidelineVerticalRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineVerticalLeft"
            app:layout_constraintTop_toBottomOf="@+id/mTvEndDate"
            tools:text="@string/local_timezone_format" />

        <TextView
            android:id="@+id/mTvPhone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_call_black_36dp"
            android:gravity="start|center_vertical"
            app:layout_constraintEnd_toStartOf="@+id/guidelineVerticalRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineVerticalLeft"
            app:layout_constraintTop_toBottomOf="@+id/mTvLocalEventTimezone"
            tools:text="@string/phone_format" />

        <TextView
            android:id="@+id/mTvEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_mail_black_36dp"
            android:gravity="start|center_vertical"
            app:layout_constraintEnd_toStartOf="@+id/guidelineVerticalRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineVerticalLeft"
            app:layout_constraintTop_toBottomOf="@+id/mTvPhone"
            tools:text="@string/email_format" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>